Usuario linkado a solicitação